--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,11 +7,12 @@ edition = "2021"
 
 [dependencies]
 axum = { version = "0.7.1", features = ["macros"] }
+derive-sql-sqlite = "0.6.0"
 env_logger = "0.10.1"
 log = "0.4.20"
+rusqlite = { version = "0.30.0", features = ["bundled"] }
 serde = { version = "1.0.193", features = ["derive"] }
 serde_json = "1.0.108"
-sqlite = "0.32.0"
 tokio = { version = "1.34.0", features = ["full"] }
 tower = { version = "0.4.13", features = ["util"] }
 tower-http = { version = "0.5.0", features = ["trace", "fs"] }
