--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,3 +16,5 @@ serde_json = "1.0.108"
 tokio = { version = "1.34.0", features = ["full"] }
 tower = { version = "0.4.13", features = ["util"] }
 tower-http = { version = "0.5.0", features = ["trace", "fs"] }
+tracing = "0.1.40"
+tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
