--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,6 +13,8 @@ log = "0.4.20"
 rusqlite = { version = "0.30.0", features = ["bundled"] }
 serde = { version = "1.0.193", features = ["derive"] }
 serde_json = "1.0.108"
+shuttle-axum = { version = "0.35.2", default-features = false, features = ["axum-0-7"] }
+shuttle-runtime = "0.35.2"
 tokio = { version = "1.34.0", features = ["full"] }
 tower = { version = "0.4.13", features = ["util"] }
 tower-http = { version = "0.5.0", features = ["trace", "fs"] }
